cmake_minimum_required(VERSION 3.10)
project(Figures) 
set (SOURCES_EXE main11_05.cpp PrintFigures.cpp) 
set (HEADERS_EXE PrintFigures.h)
set (SOURCES_LIB LibFigureDynamic/Figure.cpp LibFigureDynamic/Quadrilateral.cpp LibFigureDynamic/Triangle.cpp) 
set (HEADERS_LIB LibFigureDynamic/Figure.h LibFigureDynamic/Quadrilateral.h LibFigureDynamic/Triangle.h)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(FiguresLib SHARED ${SOURCES_LIB} ${HEADERS_LIB}) 
add_executable(FiguresExe ${SOURCES_EXE})
target_link_libraries(FiguresExe FiguresLib)